CREATE DATABASE IF NOT EXISTS bookstore_fresh
  CHARACTER SET utf8mb4 COLLATE utf8mb4_unicode_ci;
USE bookstore_fresh;

CREATE TABLE IF NOT EXISTS books(
  id BIGINT PRIMARY KEY AUTO_INCREMENT,
  title  VARCHAR(255) NOT NULL,
  author VARCHAR(255) NOT NULL,
  isbn   VARCHAR(20),
  price  DECIMAL(10,2) NOT NULL,
  stock  INT DEFAULT 0,
  UNIQUE KEY uk_isbn(isbn)
);

CREATE TABLE IF NOT EXISTS orders(
  id BIGINT PRIMARY KEY AUTO_INCREMENT,
  user_id BIGINT NULL,
  total DECIMAL(10,2) NOT NULL,
  created_at TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP
);

CREATE TABLE IF NOT EXISTS order_items(
  id BIGINT PRIMARY KEY AUTO_INCREMENT,
  order_id BIGINT NOT NULL,
  book_id BIGINT NOT NULL,
  quantity INT NOT NULL,
  price DECIMAL(10,2) NOT NULL,
  created_at TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
  CONSTRAINT fk_order_items_order FOREIGN KEY (order_id) REFERENCES orders(id) ON DELETE CASCADE,
  CONSTRAINT fk_order_items_book  FOREIGN KEY (book_id) REFERENCES books(id)  ON DELETE RESTRICT
);
